--- a/apps/ariadne-extract/Cargo.toml
+++ b/apps/ariadne-extract/Cargo.toml
@@ -4,19 +4,16 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-clap.workspace = true
-thiserror.workspace = true
+clap = { workspace = true }
 derive_more = { workspace = true, features = ["display"] }
-
-serde_json.workspace = true
-serde.workspace = true
-
-syn = { workspace = true, features = ["visit"] }
-proc-macro2.workspace = true
-walkdir.workspace = true
-
-syn-miette.workspace = true
 miette = { workspace = true, features = ["syntect-highlighter"] }
+proc-macro2 = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+syn = { workspace = true, features = ["visit"] }
+syn-miette = { workspace = true }
+thiserror = { workspace = true }
+walkdir = { workspace = true }
 
 [lints]
 workspace = true
