--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,8 +2,8 @@
 channel = "nightly-2025-09-18"
 profile = "default"
 components = [
-	"rust-analyzer",
-	# use cranelift in debug builds to improve compile times
-	# also see `.cargo/config.toml`
-	"rustc-codegen-cranelift-preview"
+  "rust-analyzer",
+  # use cranelift in debug builds to improve compile times
+  # also see `.cargo/config.toml`
+  "rustc-codegen-cranelift-preview",
 ]
