Fix .env, docker-compose

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -141,4 +141,7 @@ COMPLIANCE_PAYOUT_THRESHOLD=disabled
 ANROK_API_KEY=none
 ANROK_API_URL=none
 
+GOTENBERG_URL=http://labrinth-gotenberg:13000
+GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
+
 ARCHON_URL=none
