--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -142,7 +142,7 @@ COMPLIANCE_PAYOUT_THRESHOLD=disabled
 ANROK_API_KEY=none
 ANROK_API_URL=none
 
-GOTENBERG_URL=http://gotenberg.labrinth.orb.local
-GOTENBERG_CALLBACK_BASE=http://host.docker.internal:3500/_internal/gotenberg
+GOTENBERG_URL=http://localhost:13000
+GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
 
 ARCHON_URL=none
