--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [workspace]
 resolver = "2"
 members = [
-  "apps/app",
-  "apps/app-playground",
-  "apps/daedalus_client",
-  "apps/labrinth",
-  "packages/app-lib",
-  "packages/ariadne",
-  "packages/daedalus",
-  "packages/modrinth-maxmind",
-  "packages/modrinth-util",
-  "packages/path-util",
+	"apps/app",
+	"apps/app-playground",
+	"apps/daedalus_client",
+	"apps/labrinth",
+	"packages/app-lib",
+	"packages/ariadne",
+	"packages/daedalus",
+	"packages/modrinth-maxmind",
+	"packages/modrinth-util",
+	"packages/path-util",
 ]
 
 [workspace.package]
@@ -32,12 +32,10 @@ ariadne = { path = "packages/ariadne" }
 async-compression = { version = "0.4.32", default-features = false }
 async-recursion = "1.1.1"
 async-stripe = { version = "0.41.0", default-features = false, features = [
-  "runtime-tokio-hyper-rustls",
+	"runtime-tokio-hyper-rustls",
 ] }
 async-trait = "0.1.89"
-async-tungstenite = { version = "0.31.0", default-features = false, features = [
-  "futures-03-sink"
-] }
+async-tungstenite = { version = "0.31.0", default-features = false, features = ["futures-03-sink"] }
 async-walkdir = "2.1.0"
 async_zip = "0.0.18"
 base64 = "0.22.1"
@@ -47,11 +45,9 @@ bytes = "1.10.1"
 censor = "0.3.0"
 chardetng = "0.1.17"
 chrono = "0.4.42"
-cidre = { version = "0.11.3", default-features = false, features = [
-  "macos_15_0"
-] }
+cidre = { version = "0.11.3", default-features = false, features = ["macos_15_0"] }
 clap = "4.5.48"
-clickhouse = "0.13.3"
+clickhouse = "0.14.0"
 color-eyre = "0.6.5"
 color-thief = "0.2.2"
 console-subscriber = "0.4.1"
@@ -81,10 +77,10 @@ hickory-resolver = "0.25.2"
 hmac = "0.12.1"
 hyper = "1.7.0"
 hyper-rustls = { version = "0.27.7", default-features = false, features = [
-  "aws-lc-rs",
-  "http1",
-  "native-tokio",
-  "tls12",
+	"aws-lc-rs",
+	"http1",
+	"native-tokio",
+	"tls12",
 ] }
 hyper-util = "0.1.17"
 iana-time-zone = "0.1.64"
@@ -95,15 +91,15 @@ itertools = "0.14.0"
 jemalloc_pprof = "0.8.1"
 json-patch = { version = "4.1.0", default-features = false }
 lettre = { version = "0.11.19", default-features = false, features = [
-  "aws-lc-rs",
-  "builder",
-  "hostname",
-  "pool",
-  "rustls",
-  "rustls-native-certs",
-  "smtp-transport",
-  "tokio1",
-  "tokio1-rustls",
+	"aws-lc-rs",
+	"builder",
+	"hostname",
+	"pool",
+	"rustls",
+	"rustls-native-certs",
+	"smtp-transport",
+	"tokio1",
+	"tokio1-rustls",
 ] }
 maxminddb = "0.26.0"
 meilisearch-sdk = { version = "0.30.0", default-features = false }
@@ -121,31 +117,28 @@ png = "0.18.0"
 prometheus = "0.14.0"
 quartz_nbt = "0.2.9"
 quick-xml = "0.38.3"
-rand = "=0.8.5"  # Locked on 0.8 until argon2 and p256 update to 0.9
-rand_chacha = "=0.3.1"  # Locked on 0.3 until we can update rand to 0.9
+rand = "=0.8.5" # Locked on 0.8 until argon2 and p256 update to 0.9
+rand_chacha = "=0.3.1" # Locked on 0.3 until we can update rand to 0.9
 redis = "0.32.7"
 regex = "1.12.2"
 reqwest = { version = "0.12.24", default-features = false }
 rgb = "0.8.52"
-rust_decimal = { version = "1.39.0", features = [
-  "serde-with-float",
-  "serde-with-str"
-] }
+rust_decimal = { version = "1.39.0", features = ["serde-with-float", "serde-with-str"] }
 rust_iso3166 = "0.1.14"
 rust-s3 = { version = "0.37.0", default-features = false, features = [
-  "fail-on-err",
-  "tags",
-  "tokio-rustls-tls",
+	"fail-on-err",
+	"tags",
+	"tokio-rustls-tls",
 ] }
 rustls = "0.23.32"
 rusty-money = "0.4.1"
 sentry = { version = "0.45.0", default-features = false, features = [
-  "backtrace",
-  "contexts",
-  "debug-images",
-  "panic",
-  "reqwest",
-  "rustls",
+	"backtrace",
+	"contexts",
+	"debug-images",
+	"panic",
+	"reqwest",
+	"rustls",
 ] }
 sentry-actix = "0.45.0"
 serde = "1.0.228"
@@ -154,7 +147,7 @@ serde_cbor = "0.11.2"
 serde_ini = "0.2.0"
 serde_json = "1.0.145"
 serde_with = "3.15.0"
-serde-xml-rs = "0.8.1"  # Also an XML (de)serializer, consider dropping yaserde in favor of this
+serde-xml-rs = "0.8.1" # Also an XML (de)serializer, consider dropping yaserde in favor of this
 sha1 = "0.10.6"
 sha1_smol = { version = "1.0.1", features = ["std"] }
 sha2 = "0.10.9"
@@ -171,8 +164,8 @@ tauri-plugin-opener = "2.5.0"
 tauri-plugin-os = "2.3.1"
 tauri-plugin-single-instance = "2.3.4"
 tauri-plugin-updater = { version = "2.9.0", default-features = false, features = [
-  "rustls-tls",
-  "zip",
+	"rustls-tls",
+	"zip",
 ] }
 tauri-plugin-window-state = "2.4.0"
 tempfile = "3.23.0"
@@ -195,19 +188,19 @@ urlencoding = "2.1.3"
 uuid = "1.18.1"
 validator = "0.20.0"
 webp = { version = "0.3.1", default-features = false }
-webview2-com = "0.38.0"  # Should be updated in lockstep with wry
+webview2-com = "0.38.0" # Should be updated in lockstep with wry
 whoami = "1.6.1"
-windows = "=0.61.3"  # Locked on 0.61 until we can update windows-core to 0.62
-windows-core = "=0.61.2"  # Locked on 0.61 until webview2-com updates to 0.62
+windows = "=0.61.3" # Locked on 0.61 until we can update windows-core to 0.62
+windows-core = "=0.61.2" # Locked on 0.61 until webview2-com updates to 0.62
 winreg = "0.55.0"
 woothee = "0.13.0"
 yaserde = "0.12.0"
 zbus = "5.11.0"
 zip = { version = "6.0.0", default-features = false, features = [
-  "bzip2",
-  "deflate",
-  "deflate64",
-  "zstd",
+	"bzip2",
+	"deflate",
+	"deflate64",
+	"zstd",
 ] }
 zxcvbn = "3.1.0"
 
@@ -251,13 +244,13 @@ opt-level = 3
 
 # Optimize for speed and reduce size on release builds
 [profile.release]
-opt-level = "s"  # Optimize for binary size
-strip = true  # Remove debug symbols
-lto = true  # Enables link to optimizations
-panic = "abort"  # Strip expensive panic clean-up logic
-codegen-units = 1  # Compile crates one after another so the compiler can optimize better
+opt-level = "s"   # Optimize for binary size
+strip = true      # Remove debug symbols
+lto = true        # Enables link to optimizations
+panic = "abort"   # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
 
 # Specific profile for labrinth production builds
 [profile.release-labrinth]
 inherits = "release"
-panic = "unwind"  # Don't exit the whole app on panic in production
+panic = "unwind"     # Don't exit the whole app on panic in production
