--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,6 +192,9 @@ tracing-subscriber = "0.3.20"
 typed-path = "0.12.0"
 url = "2.5.7"
 urlencoding = "2.1.3"
+utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "decimal"] }
+utoipa-actix-web = { version = "0.1.2" }
+utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }
 uuid = "1.18.1"
 validator = "0.20.0"
 webp = { version = "0.3.1", default-features = false }
