--- a/packages/ariadne/Cargo.toml
+++ b/packages/ariadne/Cargo.toml
@@ -12,6 +12,7 @@ serde_bytes = { workspace = true }
 serde_cbor = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+utoipa = { workspace = true }
 uuid = { workspace = true, features = ["fast-rng", "serde", "v4"] }
 
 [lints]
