--- a/.github/ISSUE_TEMPLATE/1-app-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-app-bug.yml
@@ -1,6 +1,7 @@
 name: 🎮 Modrinth App bug
 description: Report an issue in the Modrinth Launcher.
-labels: [bug, app]
+labels: [app]
+type: 'bug'
 body:
   - type: checkboxes
     attributes:
