--- a/.github/ISSUE_TEMPLATE/2-web-bug.yml
+++ b/.github/ISSUE_TEMPLATE/2-web-bug.yml
@@ -1,6 +1,7 @@
 name: 🌐 Website bug (modrinth.com)
 description: Report an issue on the Modrinth website.
-labels: [bug, web]
+labels: [web]
+type: 'bug'
 body:
   - type: checkboxes
     attributes:
