Update issue template formatting further

--- a/.github/ISSUE_TEMPLATE/2-web-bug.yml
+++ b/.github/ISSUE_TEMPLATE/2-web-bug.yml
@@ -1,6 +1,6 @@
-name: 🌐 Website bug (modrinth.com)
-description: Report an issue on the Modrinth website.
-labels: [web]
+name: 🌐 Bug with Modrinth.com
+description: For issues with the Modrinth website.
+labels: [website]
 type: 'bug'
 body:
   - type: checkboxes
