--- a/.github/ISSUE_TEMPLATE/5-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/5-feature-request.yml
@@ -1,4 +1,4 @@
-name: 💡 Feature Request
+name: 💡 Feature request
 description: Suggest an idea
 type: 'feature'
 
@@ -17,9 +17,10 @@ body:
       label: What parts of Modrinth is your feature request related too?
       multiple: true
       options:
-        - App
-        - Website
-        - API
+        - Modrinth App
+        - Modrinth.com website
+        - Modrinth Servers
+        - Modrinth API for developers
   - type: textarea
     attributes:
       label: Is your suggested feature related to a problem? Please describe.
