--- a/.github/ISSUE_TEMPLATE/1-app-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-app-bug.yml
@@ -1,5 +1,5 @@
 name: 🎮 Bug with Modrinth App
-description: For issues with the Modrinth App launcher.
+description: For issues with Modrinth App.
 labels: [app]
 type: 'bug'
 body:
