Update issue templates (#4606)
* Update 1-app-bug.yml

Signed-off-by: Prospector <6166773+Prospector@users.noreply.github.com>

* update the rest of the templates

* Update issue template formatting further

* Disable blank issue + get rid of some contact links

* fix issue location id

* more updates

---------

Signed-off-by: Prospector <6166773+Prospector@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/4-api-bug.yml
+++ b/.github/ISSUE_TEMPLATE/4-api-bug.yml
@@ -1,6 +1,7 @@
-name: 🛠️ API issue (api.modrinth.com)
-description: Report an issue regarding the Modrinth API.
-labels: [bug, backend]
+name: 🛠 Bug with Modrinth API
+description: For issues with the Modrinth API for developers.
+labels: [api, backend]
+type: 'bug'
 body:
   - type: checkboxes
     attributes:
