--- a/.github/ISSUE_TEMPLATE/3-servers-bug.yml
+++ b/.github/ISSUE_TEMPLATE/3-servers-bug.yml
@@ -1,6 +1,6 @@
-name: 🌐 Bug with Modrinth.com
-description: For issues with the Modrinth website.
-labels: [website]
+name: 🌐 Bug with Modrinth Servers
+description: For issues with a Modrinth Servers product.
+labels: [servers]
 type: 'bug'
 body:
   - type: checkboxes
@@ -12,11 +12,21 @@ body:
         - label: I have tried resolving the issue using the [support portal](https://support.modrinth.com)
           required: true
   - type: dropdown
+    id: issue-location
+    attributes:
+      label: Is this an issue in the control panel or with the Minecraft server itself?
+      options:
+        - Control panel (on Modrinth.com)
+        - Minecraft server
+    validations:
+      required: true
+  - type: dropdown
     id: browsers
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: What browsers are you seeing the problem on? (if a panel issue)
       multiple: true
       options:
+        - N/A
         - Chrome (including Arc, Brave, Opera, Vivaldi)
         - Microsoft Edge
         - Firefox
