--- a/.github/ISSUE_TEMPLATE/3-servers-bug.yml
+++ b/.github/ISSUE_TEMPLATE/3-servers-bug.yml
@@ -1,4 +1,4 @@
-name: 🌐 Bug with Modrinth Servers
+name: 👥 Bug with Modrinth Servers
 description: For issues with a Modrinth Servers product.
 labels: [servers]
 type: 'bug'
