--- a/packages/muralpay/Cargo.toml
+++ b/packages/muralpay/Cargo.toml
@@ -25,6 +25,7 @@ secrecy = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 uuid = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
