Implement affiliate payout queue

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -152,3 +152,5 @@ MURALPAY_API_URL=https://api.muralpay.com
 MURALPAY_API_KEY=none
 MURALPAY_TRANSFER_API_KEY=none
 MURALPAY_SOURCE_ACCOUNT_ID=none
+
+DEFAULT_AFFILIATE_REVENUE_SPLIT=0.1
