--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -156,3 +156,5 @@ MURALPAY_API_URL=https://api-staging.muralpay.com
 MURALPAY_API_KEY=none
 MURALPAY_TRANSFER_API_KEY=none
 MURALPAY_SOURCE_ACCOUNT_ID=none
+
+DEFAULT_AFFILIATE_REVENUE_SPLIT=0.1
