--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ serde-xml-rs = "0.8.1"  # Also an XML (de)serializer, consider dropping yaserde 
 sha1 = "0.10.6"
 sha1_smol = { version = "1.0.1", features = ["std"] }
 sha2 = "0.10.9"
+shlex = "1.3.0"
 spdx = "0.12.0"
 sqlx = { version = "0.8.6", default-features = false }
 sysinfo = { version = "0.37.2", default-features = false }
