--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -147,3 +147,8 @@ GOTENBERG_URL=http://localhost:13000
 GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
 
 ARCHON_URL=none
+
+MURALPAY_API_URL=https://api-staging.muralpay.com
+MURALPAY_API_KEY=none
+MURALPAY_TRANSFER_API_KEY=none
+MURALPAY_SOURCE_ACCOUNT_ID=none
