--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -19,7 +19,10 @@ MEILISEARCH_KEY=modrinth
 REDIS_URL=redis://localhost
 REDIS_MAX_CONNECTIONS=10000
 
-BIND_ADDR=127.0.0.1:8000
+# Must bind to broadcast, not localhost, because some
+# Docker services (Gotenberg) must be able to reach the backend
+# from a different network interface
+BIND_ADDR=0.0.0.0:8000
 SELF_ADDR=http://127.0.0.1:8000
 
 MODERATION_SLACK_WEBHOOK=
