--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -43,6 +43,7 @@
 		"@modrinth/moderation": "workspace:*",
 		"@modrinth/ui": "workspace:*",
 		"@modrinth/utils": "workspace:*",
+		"@modrinth/api-client": "workspace:*",
 		"@pinia/nuxt": "^0.5.1",
 		"@types/three": "^0.172.0",
 		"@vintl/vintl": "^4.4.1",
