--- a/packages/modrinth-util/Cargo.toml
+++ b/packages/modrinth-util/Cargo.toml
@@ -6,10 +6,14 @@ repository.workspace = true
 
 [dependencies]
 actix-web = { workspace = true }
+console-subscriber = { workspace = true }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
 dotenvy = { workspace = true }
 eyre = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+tracing = { workspace = true }
+tracing-ecs = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
