--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 [dependencies]
 actix-cors = { workspace = true }
 actix-files = { workspace = true }
+actix-http = { workspace = true, optional = true }
 actix-multipart = { workspace = true }
 actix-rt = { workspace = true }
 actix-web = { workspace = true }
@@ -36,7 +37,6 @@ clap = { workspace = true, features = ["derive"] }
 clickhouse = { workspace = true, features = ["time", "uuid"] }
 color-eyre = { workspace = true }
 color-thief = { workspace = true }
-console-subscriber = { workspace = true }
 const_format = { workspace = true }
 dashmap = { workspace = true }
 deadpool-redis.workspace = true
@@ -71,6 +71,7 @@ json-patch = { workspace = true }
 lettre = { workspace = true }
 meilisearch-sdk = { workspace = true, features = ["reqwest"] }
 modrinth-maxmind = { workspace = true }
+modrinth-util = { workspace = true }
 muralpay = { workspace = true, features = ["utoipa"] }
 murmur2 = { workspace = true }
 paste = { workspace = true }
@@ -119,8 +120,6 @@ tokio-stream = { workspace = true }
 totp-rs = { workspace = true, features = ["gen_secret"] }
 tracing = { workspace = true }
 tracing-actix-web = { workspace = true }
-tracing-ecs = { workspace = true }
-tracing-subscriber = { workspace = true }
 url = { workspace = true }
 urlencoding = { workspace = true }
 utoipa = { workspace = true }
@@ -135,7 +134,7 @@ zip = { workspace = true }
 zxcvbn = { workspace = true }
 
 [dev-dependencies]
-actix-http = { workspace = true }
+labrinth = { path = ".", features = ["test"] }
 
 [build-dependencies]
 chrono = { workspace = true }
@@ -149,6 +148,9 @@ tikv-jemallocator = { workspace = true, features = [
   "profiling",
   "unprefixed_malloc_on_supported_platforms",
 ] }
+
+[features]
+test = ["dep:actix-http"]
 
 [lints]
 workspace = true
