Add timeout to default env vars

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -144,6 +144,7 @@ ANROK_API_URL=none
 
 GOTENBERG_URL=http://labrinth-gotenberg:13000
 GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
+GOTENBERG_TIMEOUT=30000
 
 ARCHON_URL=none
 
