--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -148,6 +148,7 @@ ANROK_API_URL=none
 
 GOTENBERG_URL=http://localhost:13000
 GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
+GOTENBERG_TIMEOUT=30000
 
 ARCHON_URL=none
 
