Supporting documents for Mural payouts (#4721)
* wip: gotenberg

* Generate and provide supporting docs for Mural payouts

* Correct docs

* shear

* update cargo lock because r-a complains otherwise

* Remove local Gotenberg queue and use Redis instead

* Store platform_id in database correctly

* Address PR comments

* Fix up CI

* fix rebase

* Add timeout to default env vars

--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -19,7 +19,10 @@ MEILISEARCH_KEY=modrinth
 REDIS_URL=redis://localhost
 REDIS_MAX_CONNECTIONS=10000
 
-BIND_ADDR=127.0.0.1:8000
+# Must bind to broadcast, not localhost, because some
+# Docker services (Gotenberg) must be able to reach the backend
+# from a different network interface
+BIND_ADDR=0.0.0.0:8000
 SELF_ADDR=http://127.0.0.1:8000
 
 MODERATION_SLACK_WEBHOOK=
@@ -145,6 +148,7 @@ ANROK_API_URL=none
 
 GOTENBERG_URL=http://localhost:13000
 GOTENBERG_CALLBACK_BASE=http://host.docker.internal:8000/_internal/gotenberg
+GOTENBERG_TIMEOUT=30000
 
 ARCHON_URL=none
 
