--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,6 +51,7 @@
 		"apexcharts": "^3.44.0",
 		"dayjs": "^1.11.10",
 		"floating-vue": "^5.2.2",
+		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.9.0",
 		"markdown-it": "^13.0.2",
 		"postprocessing": "^6.37.6",
