--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -8,12 +8,10 @@
 		"fix": "eslint . --fix && prettier --write ."
 	},
 	"dependencies": {
-		"ofetch": "^1.4.1",
-		"papaparse": "^5.4.1"
+		"ofetch": "^1.4.1"
 	},
 	"devDependencies": {
-		"@modrinth/tooling-config": "workspace:*",
-		"@types/papaparse": "^5.3.15"
+		"@modrinth/tooling-config": "workspace:*"
 	},
 	"peerDependencies": {
 		"@tauri-apps/plugin-http": "^2.0.0"
