--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -16,10 +16,12 @@ actix-http = { workspace = true, optional = true }
 actix-multipart = { workspace = true }
 actix-rt = { workspace = true }
 actix-web = { workspace = true }
+derive_more = { workspace = true, features = ["debug"] }
 actix-web-prom = { workspace = true, features = ["process"] }
 actix-ws = { workspace = true }
 arc-swap = { workspace = true }
 argon2 = { workspace = true }
+secrecy = { workspace = true  }
 ariadne = { workspace = true }
 async-stripe = { workspace = true, features = [
   "billing",
