feat: ws client

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -8,6 +8,7 @@
 		"fix": "eslint . --fix && prettier --write ."
 	},
 	"dependencies": {
+		"mitt": "^3.0.1",
 		"ofetch": "^1.4.1"
 	},
 	"devDependencies": {
