--- a/packages/modrinth-util/Cargo.toml
+++ b/packages/modrinth-util/Cargo.toml
@@ -9,11 +9,9 @@ actix-web = { workspace = true }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
 dotenvy = { workspace = true }
 eyre = { workspace = true }
+modrinth-log = { workspace = true }
 rust_decimal = { workspace = true, features = ["macros"], optional = true }
 serde = { workspace = true, features = ["derive"] }
-tracing = { workspace = true }
-tracing-ecs = { workspace = true }
-tracing-subscriber = { workspace = true }
 utoipa = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -21,6 +19,7 @@ serde_json = { workspace = true }
 
 [features]
 decimal = ["dep:rust_decimal", "utoipa?/decimal"]
+error = []
 utoipa = ["dep:utoipa"]
 
 [lints]
